refactor: stream 메서드 dot 줄바꿈 추가 및 collect 메서드 부분 toList 메서드로 수정